# Testing-rig

./: .gitignore  Makefile  README.md  README_training.md  docker-compose.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yaml
apps/: eval_dashboard.py
artifacts/tokenizer/: tokenizer.json
configs/: data.yaml  distributed.yaml  train.yaml
data/annotations/: instances_coptic.json  translations.json
data/parallel/: README.md
data/splits/: test.txt  train.txt  val.txt
data/transcriptions/: train.txt  val.txt
data/val/: annotations.tsv
data/val/predictions/: donut.txt  metadata.json  paddleocr.txt  trocr.txt
deploy/: Dockerfile
docs/: hardware_setup.md  model_selection.md
ml_project/: __init__.py  dataset.py  inference.py  preprocessing.py  registry.py  training.py
reports/: backbone_comparison.md  qc_annotation_report.md  tokenizer_coverage.json  translation_eval.md
scripts/: benchmark_backbones.py  download_coptic_corpus.py  evaluate_translation.py  launch_training.sh  qc_annotations.py  train_preview.py  update_tokenizer.py
src/: __init__.py
src/active_learning/: select.py
src/data/: __init__.py  augment.py  dataset.py  preprocess.py
src/inference/: predict.py
src/server/: app.py
src/training/: train.py  utils.py
src/translation/: __init__.py  pipeline.py  train_mt.py
tests/: test_dataset.py  test_inference.py  test_preprocess.py  test_preprocessing.py  test_training.py
